--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -8,9 +8,16 @@
     "start": "node dist/index"
   },
   "dependencies": {
+    "@prisma/client": "^5.8.1",
     "ioredis": "^5.3.2",
+    "kafkajs": "^2.2.4",
     "socket.io": "^4.7.4",
-    "tsc-watch": "^6.0.4",
+    "tsc-watch": "^6.0.4"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.8",
+    "prisma": "^5.8.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5.3.3"
   }
 }
